--- a/principios_de_desarrollo/intro_docker.ipynb
+++ b/principios_de_desarrollo/intro_docker.ipynb
@@ -140,7 +140,15 @@
     "|-v /mydir:/targetdir ...| mapear un diretorio dentro del contendor|\n",
     "\n",
     "\n",
-    "Por ejemplo el siguiente comando crea una terminal en un contenedor que usa la imagen ubuntu:\n",
+    "Por ejemplo el siguiente comando crea una terminal en un contenedor que usa la imagen python:\n",
+    "```bash\n",
+    "docker run -it python:3.8 bash\n",
+    "```\n",
+    "\n",
+    "Y el siguiente monta en un volumen el directorio actual al directorio /code:\n",
+    "```bash\n",
+    "docker run -v ${PWD}:/code  -it python:3.8 bash\n",
+    "```\n",
     "\n",
     "Algunos otros comandos:\n",
     "\n",
@@ -163,6 +171,13 @@
     "- Construye la imagen.\n",
     "- Ejecuta el contenedor."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
