--- a/principios_de_desarrollo/intro_git.ipynb
+++ b/principios_de_desarrollo/intro_git.ipynb
@@ -140,7 +140,7 @@
     "## Ejercicio\n",
     "Trabajamos en parejas.\n",
     "- Uno de los dos crea un repositorio.\n",
-    "- Da permiso a tu compañero en GitHub.\n",
+    "- Da permiso a tu compañero en GitHub para que pueda realizar contribuciones.\n",
     "- Cada uno crea una nueva rama.\n",
     "- Añadir código.\n",
     "- Realiza un commit de tus cambios en la rama que has creado.\n",
