--- a/principios_de_desarrollo/intro_terminal.ipynb
+++ b/principios_de_desarrollo/intro_terminal.ipynb
@@ -216,7 +216,7 @@
     "## 9.2. Redirecting\n",
     "- Muchas veces queremos guardar la salida de un comando. Para ello usamos el caracter  “>”.\n",
     "- Ejemplo: ```ls -la . > data.txt```: guarda la salida al fichero data.txt  si el fichero existe lo sobreescribe.\n",
-    "- Ejemplo: ```ls -la . > data.txt```: guarda la salida al fichero data.txt concatenando al final de los contenidos existentes.\n",
+    "- Ejemplo: ```ls -la . >> data.txt```: guarda la salida al fichero data.txt concatenando al final de los contenidos existentes.\n",
     "\n",
     "## 10. Scripts\n",
     "- Un conjunto de comandos se pueden agrupar en ficheros formando un script.\n",
