--- a/API_Practica/ejercicios/solucion/ejercicio_solucion.ipynb
+++ b/API_Practica/ejercicios/solucion/ejercicio_solucion.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Ejercicios Dia 1 Solución"
+    "# Solución Ejercicio"
    ]
   },
   {
@@ -38,13 +38,6 @@
     "\n",
     "config_logging()   "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -110,13 +103,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Creamos para el mercado dax, cada 200 dias y con un tag determinado\n",
     "eqw = EqWAlgo(market='DAX', rebal_freq=200, algo_tag='fcalletest_algo1')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
