--- a/intro.ipynb
+++ b/intro.ipynb
@@ -40,7 +40,8 @@
     "* [1.1.](./API_Practica/examples_python/algo_example.ipynb) Ejemplos API Python Algo.\n",
     "* [1.2.](./API_Practica/examples_python/error_interpretation.ipynb) Ejemplos API Python Errores.\n",
     "* [1.3.](./API_Practica/examples_r/ejemplo_R.R) Ejemplos API R.\n",
-    "* [1.4.](./API_Practica/ejercicios/ejercicio_algos.ipynb) Ejercicios.\n",
+    "* [1.4.](./API_Practica/ejercicios/ejercicio_algos.ipynb) Ejercicio.\n",
+    "* [SOL](./API_Practica/ejercicios/solucion/ejercicio_solucion.ipynb) Ejercicio.\n",
     "\n",
     "\n",
     "\n",
