--- a/intro.ipynb
+++ b/intro.ipynb
@@ -20,12 +20,12 @@
     "\n",
     "| Fechas        | Descripción  |\n",
     "| :------------ |:------------ |\n",
-    "| **09-07-2021** |Entrega del enunciado|\n",
-    "| **31-07-2021**   | Publicación de API y ejemplos |\n",
-    "| **31-07-2021**    | Primer día de acceso. Los participantes pueden enviar o borrar órdenes históricas hasta la fecha actual |\n",
-    "| **31-08-2021** |Entrega del código de los algoritmos en la plataforma del instituto|\n",
-    "| **01-09-2021**   | Fecha inicio competición. Las órdenes históricas quedarán congeladas, y los participantes podrán enviar sus ordenes sólo en el día desde que estén disponibles los datos hasta las 9:00AM|\n",
-    "| **28-02-2021**   | Fecha final de competición |\n",
+    "| **09-07-2022** |Entrega del enunciado|\n",
+    "| **31-07-2022**   | Publicación de API y ejemplos |\n",
+    "| **31-07-2022**    | Primer día de acceso. Los participantes pueden enviar o borrar órdenes históricas hasta la fecha actual |\n",
+    "| **31-08-2022** |Entrega del código de los algoritmos en la plataforma del instituto|\n",
+    "| **01-09-2022**   | Fecha inicio competición. Las órdenes históricas quedarán congeladas, y los participantes podrán enviar sus ordenes sólo en el día desde que estén disponibles los datos hasta las 9:00AM|\n",
+    "| **28-02-2022**   | Fecha final de competición |\n",
     "\n",
     "Urls:\n",
     "\n",
@@ -36,32 +36,35 @@
     "\n",
     "\n",
     "Para descargar los datos y enviar las asignaciones de la cartera de inversión debes conectarte via API. En los siguientes notebooks veremos ejemplos de uso:\n",
-    "* [1.0.](./API_Practica/examples_python/data_example.ipynb) Ejemplos API Python Data.\n",
-    "* [1.1.](./API_Practica/examples_python/algo_example.ipynb) Ejemplos API Python Algo.\n",
-    "* [1.2.](./API_Practica/examples_python/error_interpretation.ipynb) Ejemplos API Python Errores.\n",
+    "* [1.0.](./API_Practica/examples_python/1_data_example.ipynb) Ejemplos API Python Data.\n",
+    "* [1.1.](./API_Practica/examples_python/2_algo_example.ipynb) Ejemplos API Python Algo.\n",
+    "* [1.2.](./API_Practica/examples_python/3_error_interpretation.ipynb) Ejemplos API Python Errores.\n",
     "* [1.3.](./API_Practica/examples_r/ejemplo_R.R) Ejemplos API R.\n",
     "* [1.4.](./API_Practica/ejercicios/ejercicio_algos.ipynb) Ejercicio.\n",
-    "* [SOL](./API_Practica/ejercicios/solucion/ejercicio_solucion.ipynb) Ejercicio.\n",
     "\n",
     "\n",
     "# 2. Principios de Desarrollo: Python.\n",
-    "* [7.8.](module_7/pytest/7_08.ipynb) Test unitarios con Pytest.\n",
-    "* [7.9.](module_7/logging/7_09.ipynb) Modulo de Logging.\n",
-    "* [8.5.](module_8/8_05.ipynb) Introducción a MongoDB.\n",
-    "* [8.6.](module_8/8_06.ipynb) ¿Qué es un API?.\n",
+    "* [2.2.](conceptos_python_despliege/logging/logging.ipynb) Modulo de Logging.\n",
+    "* [2.1.](conceptos_python_despliege/pytest/pytest.ipynb) Test unitarios con Pytest.\n",
+    "* [2.3.](conceptos_python_despliege/mongo/mongo.ipynb) Introducción a MongoDB.\n",
     "\n",
     "\n",
     "# 3. Principios de Desarrollo: Despliege Simplifcado en Google Cloud.\n",
-    "* [2.3.](python_prod/venv/virtual_enviroments.ipynb) Virtual Enviroments en Python\n",
-    "* [2.3.](./principios_de_desarrollo/cron/cron.ipynb) Cron y Cronjobs.\n",
-    "\n",
+    "* [3.1.](despliege_simple_gcloud/steps_to_gcloud.md) Despliege Simplifcado en Google Cloud.\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -75,7 +78,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
