--- a/API_Practica/examples_python/1_data_example.ipynb
+++ b/API_Practica/examples_python/1_data_example.ipynb
@@ -31,8 +31,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "url_base = 'https://miax-gateway-jog4ew3z3q-ew.a.run.app'\n",
-    "headers = {'Content-Type': 'application/json'}"
+    "url_base = 'https://miax-gateway-jog4ew3z3q-ew.a.run.app'"
    ]
   },
   {
