--- a/API_Practica/examples_python/2_algo_example.ipynb
+++ b/API_Practica/examples_python/2_algo_example.ipynb
@@ -31,8 +31,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "url_base = 'https://miax-gateway-jog4ew3z3q-ew.a.run.app'\n",
-    "headers = {'Content-Type': 'application/json'}"
+    "url_base = 'https://miax-gateway-jog4ew3z3q-ew.a.run.app'"
    ]
   },
   {
@@ -166,6 +165,40 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Para mandar una allocation:\n",
+    "- Necesitamos la fecha con el formato %Y-%m-%d'\n",
+    "- Solo podemos mandar un día en cada petición.\n",
+    "- Usamos el endpoint /participants/allocation."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "params = {\n",
+    "    'competi': competi,\n",
+    "    'algo_tag': algo_tag,\n",
+    "    'market': market,\n",
+    "    'date': '2019-10-01',\n",
+    "    'allocation': allocation\n",
+    "}\n",
+    "response = requests.post(url_auth, data=json.dumps(params))\n",
+    "print(response.json())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "En el siguiente ejemplo mandamos una serie de allocations:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -181,29 +214,6 @@
    "outputs": [],
    "source": [
     "days"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Ponemos las fechas con formato: '%Y-%m-%d'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "days[0].strftime('%Y-%m-%d')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Mandamos las allocations:"
    ]
   },
   {
