--- a/intro.ipynb
+++ b/intro.ipynb
@@ -42,24 +42,10 @@
     "* [1.3.](./API_Practica/examples_r/ejemplo_R.R) Ejemplos API R.\n",
     "* [1.4.](./API_Practica/ejercicios/ejercicio_algos.ipynb) Ejercicio.\n",
     "\n",
-    "\n",
-    "# 2. Principios de Desarrollo: Python.\n",
-    "* [2.2.](conceptos_python_despliege/logging/logging.ipynb) Modulo de Logging.\n",
-    "* [2.1.](conceptos_python_despliege/pytest/pytest.ipynb) Test unitarios con Pytest.\n",
-    "* [2.3.](conceptos_python_despliege/mongo/mongo.ipynb) Introducción a MongoDB.\n",
-    "\n",
-    "\n",
-    "# 3. Principios de Desarrollo: Despliege Simplifcado en Google Cloud.\n",
-    "* [3.1.](despliege_simple_gcloud/steps_to_gcloud.md) Despliege Simplifcado en Google Cloud.\n",
+    "# Despliege Simplifcado en Google Cloud.\n",
+    "* [2.1.](despliege_simple_gcloud/steps_to_gcloud.md) Despliege Simplifcado en Google Cloud.\n",
     "\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
