--- a/API_Practica/examples_python/2_algo_example.ipynb
+++ b/API_Practica/examples_python/2_algo_example.ipynb
@@ -48,7 +48,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "competi = 'mia_9'\n",
+    "competi = 'mia_10'\n",
     "user_key = 'PON_AQUI_TU_KEY'"
    ]
   },
@@ -82,13 +82,22 @@
    "outputs": [],
    "source": [
     "url = f'{url_base}/participants/algorithms'\n",
-    "params = {'competi': competi,\n",
-    "          'key': user_key}\n",
+    "params = {\n",
+    "    'competi': competi,\n",
+    "    'key': user_key\n",
+    "}\n",
     "response = requests.get(url, params)\n",
-    "algos = response.json()\n",
-    "if algos:\n",
-    "    algos_df = pd.DataFrame(algos)\n",
-    "    print(algos_df.to_string())\n"
+    "algos = response.json()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "algos_df = pd.DataFrame(algos)\n",
+    "algos_df"
    ]
   },
   {
@@ -121,27 +130,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "market = 'IBEX'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def gen_alloc_data(ticker, alloc):\n",
     "    return {'ticker': ticker,\n",
     "            'alloc': alloc}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "tickers = ['TEF','SAN','IBE','ITX','REP','AMS']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "market = 'IBEX'"
    ]
   },
   {
@@ -160,7 +160,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "allocation = [gen_alloc_data(tk, 0.15) for tk in tickers]\n",
+    "tickers = ['TEF','SAN','IBE','ITX','REP','AMS']\n",
+    "allocation = [\n",
+    "    gen_alloc_data(tk, 0.15)\n",
+    "    for tk in tickers\n",
+    "]\n",
     "allocation"
    ]
   },
@@ -177,17 +181,22 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
-    "params = {\n",
+    "url = f'{url_base}/participants/allocation?key={user_key}'\n",
+    "\n",
+    "data = {\n",
     "    'competi': competi,\n",
     "    'algo_tag': algo_tag,\n",
     "    'market': market,\n",
     "    'date': '2019-10-01',\n",
     "    'allocation': allocation\n",
     "}\n",
-    "response = requests.post(url_auth, data=json.dumps(params))\n",
+    "response = requests.post(url, data=json.dumps(data))\n",
+    "print(response.text)\n",
     "print(response.json())"
    ]
   },
@@ -204,15 +213,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "days = pd.date_range('2019-10-01', '2019-12-31', freq='BMS')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "days = pd.date_range('2019-10-01', '2019-12-31', freq='BMS')\n",
     "days"
    ]
   },
@@ -222,9 +223,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "url = f'{url_base}/participants/allocation'\n",
-    "url_auth = f'{url}?key={user_key}'\n",
-    "print(url_auth)\n",
+    "url = f'{url_base}/participants/allocation?key={user_key}'\n",
     "\n",
     "for iday in days:\n",
     "    str_date = iday.strftime('%Y-%m-%d')\n",
@@ -235,9 +234,8 @@
     "        'date': str_date,\n",
     "        'allocation': allocation\n",
     "    }\n",
-    "    #print(json.dumps(params))\n",
-    "    response = requests.post(url_auth, data=json.dumps(params))\n",
-    "    print (response.json())"
+    "    response = requests.post(url, data=json.dumps(params))\n",
+    "    print(response.json())"
    ]
   },
   {
@@ -277,6 +275,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "response.text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def allocs_to_frame(json_allocations):\n",
     "    alloc_list = []\n",
     "    for json_alloc in json_allocations:\n",
@@ -293,7 +300,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "allocs_to_frame(response.json())"
@@ -330,13 +339,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "url = f'{url_base}/participants/exec_algo'\n",
-    "url_auth = f'{url}?key={user_key}'\n",
+    "url = f'{url_base}/participants/exec_algo?key={user_key}'\n",
     "params = {\n",
     "    'competi': competi,\n",
     "    'algo_tag': algo_tag,\n",
     "    'market': market,\n",
-    "    }"
+    "}"
    ]
   },
   {
@@ -345,7 +353,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "response = requests.post(url_auth, data=json.dumps(params))"
+    "response = requests.post(url, data=json.dumps(params))"
    ]
   },
   {
@@ -485,7 +493,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
