--- a/API_Practica/examples_python/3_error_interpretation.ipynb
+++ b/API_Practica/examples_python/3_error_interpretation.ipynb
@@ -24,8 +24,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "url_base = 'https://miax-gateway-jog4ew3z3q-ew.a.run.app'\n",
-    "headers = {'Content-Type': 'application/json'}"
+    "url_base = 'https://miax-gateway-jog4ew3z3q-ew.a.run.app'"
    ]
   },
   {
@@ -34,7 +33,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "competi = 'mia_9'\n",
+    "competi = 'mia_10'\n",
     "user_key = 'PON_AQUI_TU_KEY'"
    ]
   },
@@ -71,7 +70,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "algos = response.json()"
@@ -182,7 +183,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
