--- a/intro.ipynb
+++ b/intro.ipynb
@@ -15,17 +15,19 @@
     "<img src=\"./API_Practica/imgs/API.png\"  alt=\"drawing\" width=\"1000\"/>\n",
     "</center>\n",
     "\n",
+    "Solo evaluarán algoritmos contra el IBEX35, pero podemos probarlos en los otros índices.\n",
     "\n",
     "Las fechas que riguen la competición son las siguientes:\n",
     "\n",
     "| Fechas        | Descripción  |\n",
     "| :------------ |:------------ |\n",
-    "| **02-07-2022** |Entrega del enunciado|\n",
-    "| **08-07-2022**   | Publicación de API y ejemplos |\n",
-    "| **08-07-2022**    | Primer día de acceso. Los participantes pueden enviar o borrar órdenes históricas hasta la fecha actual |\n",
-    "| **04-09-2022** |Entrega del código de los algoritmos en la plataforma del instituto|\n",
-    "| **05-09-2022**   | Fecha inicio competición. Las órdenes históricas quedarán congeladas, y los participantes podrán enviar sus ordenes sólo en el día desde que estén disponibles los datos hasta las 9:00AM|\n",
-    "| **31-03-2022**   | Fecha final de competición |\n",
+    "| **20-01-2023** |Entrega del enunciado|\n",
+    "| **28-01-2023**   | Publicación de API y ejemplos |\n",
+    "| **28-01-2023**    | Primer día de acceso. Los participantes pueden enviar o borrar órdenes históricas hasta la fecha actual |\n",
+    "| **02-04-2023** |Entrega del código de los algoritmos en la plataforma del instituto|\n",
+    "| **03-04-2023**   | Fecha inicio competición. Las órdenes históricas quedarán congeladas, y los participantes podrán enviar sus ordenes sólo en el día desde que estén disponibles los datos hasta las 9:00AM|\n",
+    "| **30-04-2023**   | Actualización del código de los algoritmos (opcional) |\n",
+    "| **03-11-2023**   | Fecha final de competición |\n",
     "\n",
     "Urls:\n",
     "\n",
@@ -42,8 +44,8 @@
     "* [1.3.](./API_Practica/examples_r/ejemplo_R.R) Ejemplos API R.\n",
     "* [1.4.](./API_Practica/ejercicios/ejercicio_algos.ipynb) Ejercicio.\n",
     "\n",
-    "# Despliege Simplifcado en Google Cloud.\n",
-    "* [2.1.](despliege_simple_gcloud/steps_to_gcloud.md) Despliege Simplifcado en Google Cloud.\n",
+    "# Despliege Simplifcado en Máquinas Vituales.\n",
+    "* [2.1.](despliege_simple_gcloud/steps_to_gcloud.md) Despliege Simplifcado en Máquinas Vituales.\n",
     "\n"
    ]
   }
@@ -64,7 +66,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.10.9"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "5c7b89af1651d0b8571dde13640ecdccf7d5a6204171d6ab33e7c296e100e08a"
+   }
   }
  },
  "nbformat": 4,
