--- a/API_Practica/ejercicios/ejercicio_algos.ipynb
+++ b/API_Practica/ejercicios/ejercicio_algos.ipynb
@@ -43,26 +43,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 112,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "\n",
     "class BMEApiHandler:\n",
     "    \n",
     "    def __init__(self):\n",
@@ -257,7 +241,7 @@
     "\n",
     "    def send_allocs_backtest(self):\n",
     "        self.apih.delete_allocs(self.algo_tag)\n",
-    "        for date, data in self.df_close.iloc[::200].iterrows():\n",
+    "        for date, data in self.df_close.iloc[::self.n_days].iterrows():\n",
     "            print(date)\n",
     "            tcks_activos = data.dropna().index\n",
     "            alloc = 1/tcks_activos.shape[0]\n",
@@ -303,7 +287,7 @@
     "        today = datetime.now()\n",
     "        days_delta = (today - last_day_alloc).days\n",
     "        \n",
-    "        if days_delta > n_days:\n",
+    "        if days_delta > self.n_days:\n",
     "\n",
     "            print('me toca rebal')     \n",
     "            maestro = self.apih.get_ticker_master()\n",
