--- a/intro.ipynb
+++ b/intro.ipynb
@@ -21,13 +21,12 @@
     "\n",
     "| Fechas        | Descripción  |\n",
     "| :------------ |:------------ |\n",
-    "| **20-01-2023** |Entrega del enunciado|\n",
-    "| **28-01-2023**   | Publicación de API y ejemplos |\n",
-    "| **28-01-2023**    | Primer día de acceso. Los participantes pueden enviar o borrar órdenes históricas hasta la fecha actual |\n",
-    "| **02-04-2023** |Entrega del código de los algoritmos en la plataforma del instituto|\n",
-    "| **03-04-2023**   | Fecha inicio competición. Las órdenes históricas quedarán congeladas, y los participantes podrán enviar sus ordenes sólo en el día desde que estén disponibles los datos hasta las 9:00AM|\n",
-    "| **30-04-2023**   | Actualización del código de los algoritmos (opcional) |\n",
-    "| **03-11-2023**   | Fecha final de competición |\n",
+    "| **06-07-2023** |Entrega del enunciado|\n",
+    "| **12-07-2023**   | Publicación de API y ejemplos |\n",
+    "| **12-07-2023**    | Primer día de acceso. Los participantes pueden enviar o borrar órdenes históricas hasta la fecha actual |\n",
+    "| **03-09-2023** |Entrega del código de los algoritmos en la plataforma del instituto|\n",
+    "| **04-09-2023**   | Fecha inicio competición. Las órdenes históricas quedarán congeladas, y los participantes podrán enviar sus ordenes sólo en el día desde que estén disponibles los datos hasta las 9:00AM|\n",
+    "| **01-03-2023**   | Fecha final de competición |\n",
     "\n",
     "Urls:\n",
     "\n",
@@ -42,11 +41,7 @@
     "* [1.1.](./API_Practica/examples_python/2_algo_example.ipynb) Ejemplos API Python Algo.\n",
     "* [1.2.](./API_Practica/examples_python/3_error_interpretation.ipynb) Ejemplos API Python Errores.\n",
     "* [1.3.](./API_Practica/examples_r/ejemplo_R.R) Ejemplos API R.\n",
-    "* [1.4.](./API_Practica/ejercicios/ejercicio_algos.ipynb) Ejercicio.\n",
-    "\n",
-    "# Despliege Simplifcado en Máquinas Vituales.\n",
-    "* [2.1.](despliege_simple_gcloud/steps_to_gcloud.md) Despliege Simplifcado en Máquinas Vituales.\n",
-    "\n"
+    "* [1.4.](./API_Practica/ejercicios/ejercicio_algos.ipynb) Ejercicio.\n"
    ]
   }
  ],
@@ -66,7 +61,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.11.2"
   },
   "vscode": {
    "interpreter": {
