--- a/API_Practica/examples_python/1_data_example.ipynb
+++ b/API_Practica/examples_python/1_data_example.ipynb
@@ -48,8 +48,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "competi = 'mia_11'\n",
-    "user_key = 'PON_AQUI_TU_KEY'"
+    "competi = 'mia_12'\n",
+    "user_key = 'TU_API_KEY'"
    ]
   },
   {
@@ -108,6 +108,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "maestro_df.ticker"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -137,7 +146,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "params = {'market': 'IBEX',\n",
@@ -286,7 +297,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.2"
+   "version": "3.11.6"
   }
  },
  "nbformat": 4,
