--- a/API_Practica/examples_python/2_algo_example.ipynb
+++ b/API_Practica/examples_python/2_algo_example.ipynb
@@ -48,8 +48,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "competi = 'mia_11'\n",
-    "user_key = 'PON_AQUI_TU_KEY'"
+    "competi = 'mia_12'\n",
+    "user_key = 'TU_API_KEY'"
    ]
   },
   {
@@ -140,8 +140,10 @@
    "outputs": [],
    "source": [
     "def gen_alloc_data(ticker, alloc):\n",
-    "    return {'ticker': ticker,\n",
-    "            'alloc': alloc}"
+    "    return {\n",
+    "        'ticker': ticker,\n",
+    "        'alloc': alloc\n",
+    "    }"
    ]
   },
   {
@@ -362,6 +364,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "response.content"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "if response.status_code == 200:\n",
     "    exec_data = response.json()\n",
     "    status = exec_data.get('status')\n",
@@ -418,7 +429,13 @@
     "    'competi': competi,\n",
     "    'algo_tag': algo_tag,\n",
     "    'market': market,\n",
-    "}"
+    "}\n",
+    "\n",
+    "response = requests.get(url, params)\n",
+    "exec_data = response.json()\n",
+    "print(exec_data.get('status'))\n",
+    "print(exec_data.get('content'))\n",
+    "\n"
    ]
   },
   {
@@ -493,7 +510,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.2"
+   "version": "3.11.6"
   }
  },
  "nbformat": 4,
