--- a/API_Practica/examples_python/3_error_interpretation.ipynb
+++ b/API_Practica/examples_python/3_error_interpretation.ipynb
@@ -33,8 +33,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "competi = 'mia_11'\n",
-    "user_key = 'PON_AQUI_TU_KEY'"
+    "competi = 'mia_12'\n",
+    "user_key = 'TU_API_KEY'"
    ]
   },
   {
@@ -71,6 +71,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "scrolled": true,
     "tags": []
    },
    "outputs": [],
@@ -85,7 +86,8 @@
    "outputs": [],
    "source": [
     "print(response.status_code)\n",
-    "print(response.text)"
+    "print(response.text)\n",
+    "print(response.content)"
    ]
   },
   {
@@ -128,7 +130,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "algo_tag = 'ejemplo_algo1'"
+    "algo_tag = 'test_user_1_miax12_algo1'"
    ]
   },
   {
@@ -137,7 +139,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bad_date = \"2020-11-04\""
+    "bad_date = \"2024-01-31\""
    ]
   },
   {
@@ -183,7 +185,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.2"
+   "version": "3.11.6"
   }
  },
  "nbformat": 4,
