--- a/intro.ipynb
+++ b/intro.ipynb
@@ -21,12 +21,12 @@
     "\n",
     "| Fechas        | Descripción  |\n",
     "| :------------ |:------------ |\n",
-    "| **06-07-2023** |Entrega del enunciado|\n",
-    "| **12-07-2023**   | Publicación de API y ejemplos |\n",
-    "| **12-07-2023**    | Primer día de acceso. Los participantes pueden enviar o borrar órdenes históricas hasta la fecha actual |\n",
-    "| **03-09-2023** |Entrega del código de los algoritmos en la plataforma del instituto|\n",
-    "| **04-09-2023**   | Fecha inicio competición. Las órdenes históricas quedarán congeladas, y los participantes podrán enviar sus ordenes sólo en el día desde que estén disponibles los datos hasta las 9:00AM|\n",
-    "| **01-03-2023**   | Fecha final de competición |\n",
+    "| **12/1/2024** |Entrega del enunciado|\n",
+    "| **30/1/2024**   | Publicación de API y ejemplos |\n",
+    "| **30/1/2024**    | Primer día de acceso. Los participantes pueden enviar o borrar órdenes históricas hasta la fecha actual |\n",
+    "| **3/3/2024** |Entrega del código de los algoritmos en la plataforma del instituto|\n",
+    "| **4/3/2024**   | Fecha inicio competición. Las órdenes históricas quedarán congeladas, y los participantes podrán enviar sus ordenes sólo en el día desde que estén disponibles los datos hasta las 9:00AM|\n",
+    "| **20/10/2024**   | Fecha final de competición |\n",
     "\n",
     "Urls:\n",
     "\n",
@@ -61,7 +61,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.2"
+   "version": "3.11.6"
   },
   "vscode": {
    "interpreter": {
