--- a/API_Practica/ejercicios/ejercicio_algos.ipynb
+++ b/API_Practica/ejercicios/ejercicio_algos.ipynb
@@ -30,6 +30,163 @@
     "9. Refactoriza el código en una clase para el algoritmo y otra para un handler del API.\n",
     "10. Ejecutalo desde la terminal."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import requests\n",
+    "import json\n",
+    "\n",
+    "\n",
+    "class BMEApiHandler:\n",
+    "\n",
+    "    def __init__(self):\n",
+    "        self.url_base = 'https://miax-gateway-jog4ew3z3q-ew.a.run.app'\n",
+    "        self.competi = 'mia_12'\n",
+    "        self.user_key = ''\n",
+    "\n",
+    "    def get_ticker_master(self):\n",
+    "        url = f'{self.url_base}/data/ticker_master'\n",
+    "        params = {'competi': self.competi,\n",
+    "                'market': 'IBEX',\n",
+    "                'key': self.user_key}\n",
+    "        response = requests.get(url, params)\n",
+    "        tk_master = response.json()\n",
+    "        maestro_df = pd.DataFrame(tk_master['master'])\n",
+    "        return maestro_df\n",
+    "\n",
+    "    def get_close_data(self, tck) -> pd.Series:\n",
+    "        url = f'{self.url_base}/data/time_series'\n",
+    "        params = {\n",
+    "            'market': 'IBEX',\n",
+    "            'key': self.user_key,\n",
+    "            'ticker': tck\n",
+    "        }\n",
+    "        response = requests.get(url, params)\n",
+    "        tk_data = response.json()\n",
+    "        series_data = pd.read_json(tk_data, typ='series')\n",
+    "        return series_data\n",
+    "\n",
+    "    def send_alloc(self, algo_tag, str_date, allocation):\n",
+    "        url = f'{self.url_base}/participants/allocation'\n",
+    "        url_auth = f'{url}?key={self.user_key}'\n",
+    "        print(url_auth)\n",
+    "        params = {\n",
+    "            'competi': self.competi,\n",
+    "            'algo_tag': algo_tag,\n",
+    "            'market': 'IBEX',\n",
+    "            'date': str_date,\n",
+    "            'allocation': allocation\n",
+    "        }\n",
+    "        #print(json.dumps(params))\n",
+    "        response = requests.post(url_auth, data=json.dumps(params))\n",
+    "        print(response.json())\n",
+    "\n",
+    "    def get_algos(self):\n",
+    "        url = f'{self.url_base}/participants/algorithms'\n",
+    "        params = {'competi': self.competi,\n",
+    "                'key': self.user_key}\n",
+    "        response = requests.get(url, params)\n",
+    "        algos = response.json()\n",
+    "        if algos:\n",
+    "            algos_df = pd.DataFrame(algos)\n",
+    "            return algos_df\n",
+    "\n",
+    "    def allocs_to_frame(self, json_allocations):\n",
+    "        alloc_list = []\n",
+    "        for json_alloc in json_allocations:\n",
+    "            #print(json_alloc)\n",
+    "            allocs = pd.DataFrame(json_alloc['allocations'])\n",
+    "            allocs.set_index('ticker', inplace=True)\n",
+    "            alloc_serie = allocs['alloc']\n",
+    "            alloc_serie.name = json_alloc['date'] \n",
+    "            alloc_list.append(alloc_serie)\n",
+    "        all_alloc_df = pd.concat(alloc_list, axis=1).T\n",
+    "        return all_alloc_df\n",
+    "\n",
+    "    def get_allocations(self, algo_tag):\n",
+    "        url = f'{self.url_base}/participants/algo_allocations'\n",
+    "        params = {\n",
+    "            'key': self.user_key,\n",
+    "            'competi': self.competi,\n",
+    "            'algo_tag': algo_tag,\n",
+    "            'market': 'IBEX',\n",
+    "        }\n",
+    "        response = requests.get(url, params)\n",
+    "        df_allocs = self.allocs_to_frame(response.json())\n",
+    "        return df_allocs\n",
+    "\n",
+    "\n",
+    "    def delete_allocs(self, algo_tag):\n",
+    "        url = f'{self.url_base}/participants/delete_allocations'\n",
+    "        url_auth = f'{url}?key={self.user_key}'\n",
+    "        params = {\n",
+    "            'competi': self.competi,\n",
+    "            'algo_tag': algo_tag,\n",
+    "            'market': 'IBEX',\n",
+    "            }\n",
+    "        response = requests.post(url_auth, data=json.dumps(params))\n",
+    "        print(response.text)\n",
+    "\n",
+    "\n",
+    "    def backtest_algo(self, algo_tag):\n",
+    "        url = f'{self.url_base}/participants/exec_algo'\n",
+    "        url_auth = f'{url}?key={self.user_key}'\n",
+    "        params = {\n",
+    "            'competi': self.competi,\n",
+    "            'algo_tag': algo_tag,\n",
+    "            'market': 'IBEX',\n",
+    "            }\n",
+    "        response = requests.post(url_auth, data=json.dumps(params))\n",
+    "        if response.status_code == 200:\n",
+    "            exec_data = response.json()\n",
+    "            status = exec_data.get('status')\n",
+    "            res_data = exec_data.get('content')\n",
+    "            if res_data:\n",
+    "                performace = pd.Series(res_data['result'])\n",
+    "                trades = pd.DataFrame(res_data['trades'])\n",
+    "                return performace, trades\n",
+    "        else:\n",
+    "            exec_data = dict()\n",
+    "            print(response.text)\n",
+    "\n",
+    "    def algo_exec_results(self, algo_tag):\n",
+    "        url = f'{self.url_base}/participants/algo_exec_results'\n",
+    "        params = {\n",
+    "            'key': user_key,\n",
+    "            'competi': competi,\n",
+    "            'algo_tag': algo_tag,\n",
+    "            'market': market,\n",
+    "        }     \n",
+    "        response = requests.get(url, params)\n",
+    "        exec_data = response.json()\n",
+    "        print(exec_data.get('status'))\n",
+    "        res_data = exec_data.get('content')\n",
+    "        if res_data:\n",
+    "            performace = pd.Series(res_data['result'])\n",
+    "            trades = pd.DataFrame(res_data['trades'])\n",
+    "            return performace, trades\n",
+    "\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
